First skeleton of algorithm to split showers based on calorimetric profiles

--- a/larpandoracontent/CMakeLists.txt
+++ b/larpandoracontent/CMakeLists.txt
@@ -17,6 +17,7 @@ set( subdir_list LArCheating
 		 LArThreeDReco/LArPfoRecovery
 		 LArThreeDReco/LArShowerFragments
 		 LArThreeDReco/LArShowerMatching
+		 LArThreeDReco/LArShowerRefining
 		 LArThreeDReco/LArThreeDBase
 		 LArThreeDReco/LArTrackFragments
 		 LArThreeDReco/LArTransverseTrackMatching
